fixedTeamNameSpacing

--- a/src/screens/NebulaPage/style.css
+++ b/src/screens/NebulaPage/style.css
@@ -95,7 +95,7 @@
   height: 146px;
   left: 676px;
   letter-spacing: 0;
-  line-height: normal;
+  line-height: 1;
   position: absolute;
   text-align: right;
   top: 59px;
