--- a/src/screens/NovaPage/style.css
+++ b/src/screens/NovaPage/style.css
@@ -95,7 +95,7 @@
     height: 146px;
     left: 726px;
     letter-spacing: 0;
-    line-height: normal;
+    line-height: 1.0;
     position: absolute;
     text-align: right;
     top: 59px;
